player: fix suburi getter debug message

The property is a string, not a boolean.

https://bugzilla.gnome.org/show_bug.cgi?id=766607